feat: ensure statusCode is included in router logs